--- a/.github/workflows/add_approvers.yml
+++ b/.github/workflows/add_approvers.yml
@@ -37,9 +37,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ORGANIZATION: ${{ vars.ORGANIZATION }}
           ENVIRONMENT: ${{ inputs.environment }}
-          APPROVER: ${{ github.event.inputs.approver }}
+          APPROVER: ${{ inputs.approver }}
         run: |
-          REPOS=$(echo "${{ steps.read_repos.outputs.repos }}" | jq -r '.[]')
+          REPOS=$(echo "$repos" | jq -r '.[]')
           for repo in $REPOS; do
             ENV_ID=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
               "https://api.github.com/repos/$ORGANIZATION/$repo/environments" | jq -r ".environments[] | select(.name==\"$ENVIRONMENT\") | .id")
