--- a/.github/workflows/add_approvers.yml
+++ b/.github/workflows/add_approvers.yml
@@ -29,9 +29,11 @@ jobs:
           cat repos.txt
           while read -r line;
           do
-          
+
             ENV_ID=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
               "https://api.github.com/repos/$ORGANIZATION/$line/environments" | jq -r ".environments[] | select(.name==\"$ENVIRONMENT\") | .id")
+
+            echo ENV_ID: $ENV_ID
 
             if [ -z "$ENV_ID" ]; then
               echo "Environment $ENVIRONMENT not found in repository $line"
