--- a/.github/workflows/add_approvers.yml
+++ b/.github/workflows/add_approvers.yml
@@ -40,10 +40,20 @@ jobs:
               continue
             fi
 
-            curl -s -X PUT -H "Authorization: token ${{ secrets.GH_PAT }}" \
-              -H "Accept: application/vnd.github.v3+json" \
-              "https://api.github.com/repositories/$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/repos/$ORGANIZATION/$line | jq -r '.id')/environments/$ENVIRONMENT/required_reviewers" \
-              -d "{\"users\":[\"$APPROVER\"]}"
+            TEAM_ID=$(curl -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/orgs/<org-name>/teams/$APPROVER | jq -r ".id")
+
+            # curl -s -X PUT -H "Authorization: token ${{ secrets.GH_PAT }}" \
+            #   -H "Accept: application/vnd.github.v3+json" \
+            #   "https://api.github.com/repositories/$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/repos/$ORGANIZATION/$line | jq -r '.id')/environments/$ENVIRONMENT/required_reviewers" \
+            #   -d "{\"users\":[\"$APPROVER\"]}"
+
+            curl -L \
+              -X PUT \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/$ORGANIZATION/$line/environments/$ENVIRONMENT \
+              -d '{"wait_timer":30,"prevent_self_review":false,"reviewers":[{"type":"Team","id":$TEAM_ID}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
 
             echo "Approver $APPROVER added to environment $ENVIRONMENT in repository $line"
 
