--- a/.github/workflows/add_approvers.yml
+++ b/.github/workflows/add_approvers.yml
@@ -42,6 +42,7 @@ jobs:
 
             TEAM_ID=$(curl -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/orgs/$ORGANIZATION/teams/$APPROVER | jq -r ".id")
 
+            echo TEAM_ID: $TEAM_ID
             # curl -s -X PUT -H "Authorization: token ${{ secrets.GH_PAT }}" \
             #   -H "Accept: application/vnd.github.v3+json" \
             #   "https://api.github.com/repositories/$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/repos/$ORGANIZATION/$line | jq -r '.id')/environments/$ENVIRONMENT/required_reviewers" \
