--- a/.github/workflows/add_approvers.yml
+++ b/.github/workflows/add_approvers.yml
@@ -46,23 +46,23 @@ jobs:
 
             echo CURL: https://api.github.com/repos/$ORGANIZATION/$line/environments/$ENVIRONMENT
 
-            JSON_PAYLOAD=$(cat <<EOF
-            {
-              "wait_timer": 30,
-              "prevent_self_review": false,
-              "reviewers": [
-                {
-                  "type": "Team",
-                  "id": $TEAM_ID
-                }
-              ],
-              "deployment_branch_policy": {
-                "protected_branches": false,
-                "custom_branch_policies": true
-              }
-            }
-            EOF
-            )
+            # JSON_PAYLOAD=$(cat <<EOF
+            # {
+            #   "wait_timer": 30,
+            #   "prevent_self_review": false,
+            #   "reviewers": [
+            #     {
+            #       "type": "Team",
+            #       "id": $TEAM_ID
+            #     }
+            #   ],
+            #   "deployment_branch_policy": {
+            #     "protected_branches": false,
+            #     "custom_branch_policies": true
+            #   }
+            # }
+            # EOF
+            # )
 
             curl -L \
               -X PUT \
@@ -70,7 +70,7 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/$ORGANIZATION/$line/environments/$ENVIRONMENT \
-              -d "$JSON_PAYLOAD"
+              -d '{"wait_timer":30,"prevent_self_review":false,"reviewers":[{"type":"Team","id":$TEAM_ID}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
 
             echo "Approver $APPROVER added to environment $ENVIRONMENT in repository $line"
 
