--- a/.github/workflows/add_approvers.yml
+++ b/.github/workflows/add_approvers.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+
+      - name: Get team ID
+        run: |
+            TEAM_ID=$(curl -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/orgs/$ORGANIZATION/teams/$APPROVER | jq -r ".id")
+            echo "TEAM_ID:$TEAM_ID" >> $GITHUB_ENV
+
       - name: Add Approvers to Environments
         env:
           ORGANIZATION: ${{ vars.ORGANIZATION }}
@@ -27,6 +33,7 @@ jobs:
           APPROVER: ${{ inputs.approver }}
         run: |
           cat repos.txt
+          echo TEAM_ID $TEAM_ID
           while read -r line;
           do
 
@@ -39,12 +46,6 @@ jobs:
               echo "Environment $ENVIRONMENT not found in repository $line"
               continue
             fi
-
-            TEAM_ID=$(curl -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/orgs/$ORGANIZATION/teams/$APPROVER | jq -r ".id")
-
-            echo TEAM_ID: $TEAM_ID
-
-            echo CURL: https://api.github.com/repos/$ORGANIZATION/$line/environments/$ENVIRONMENT
 
             # JSON_PAYLOAD=$(cat <<EOF
             # {
@@ -70,7 +71,7 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/$ORGANIZATION/$line/environments/$ENVIRONMENT \
-              -d '{"wait_timer":30,"prevent_self_review":false,"reviewers":[{"type":"Team","id":10247043}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
+              -d '{"wait_timer":30,"prevent_self_review":false,"reviewers":[{"type":"Team","id":$TEAM_ID}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
 
             echo "Approver $APPROVER added to environment $ENVIRONMENT in repository $line"
 
