--- a/.github/workflows/add_approvers.yml
+++ b/.github/workflows/add_approvers.yml
@@ -22,9 +22,10 @@ jobs:
 
 
       - name: Get team ID
+        id: get_team_id
         run: |
             TEAM_ID=$(curl -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/orgs/$ORGANIZATION/teams/$APPROVER | jq -r ".id")
-            echo "TEAM_ID:$TEAM_ID" >> $GITHUB_ENV
+            echo "TEAM_ID:$TEAM_ID" >> $GITHUB_OUTPUT
 
       - name: Add Approvers to Environments
         env:
@@ -33,7 +34,7 @@ jobs:
           APPROVER: ${{ inputs.approver }}
         run: |
           cat repos.txt
-          echo TEAM_ID $TEAM_ID
+          echo TEAM_ID ${{ steps.get_team_id.output.TEAM_ID }}
           while read -r line;
           do
 
@@ -71,7 +72,7 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/$ORGANIZATION/$line/environments/$ENVIRONMENT \
-              -d '{"wait_timer":30,"prevent_self_review":false,"reviewers":[{"type":"Team","id":$TEAM_ID}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
+              -d '{"wait_timer":30,"prevent_self_review":false,"reviewers":[{"type":"Team","id":${{ steps.get_team_id.output.TEAM_ID }}}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
 
             echo "Approver $APPROVER added to environment $ENVIRONMENT in repository $line"
 
