--- a/.github/workflows/add_approvers.yml
+++ b/.github/workflows/add_approvers.yml
@@ -20,7 +20,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-
       - name: Get team ID
         id: get_team_id
         env:
@@ -58,10 +57,10 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/$ORGANIZATION/$line/environments/$ENVIRONMENT \
-              -d '{"prevent_self_review":false,"reviewers":[{"type":"Team","id":${{ steps.get_team_id.outputs.TEAM_ID }}}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":false}}'
-
+              -d '{"prevent_self_review":false,"reviewers":[{"type":"Team","id":${{ steps.get_team_id.outputs.TEAM_ID }}}],"deployment_branch_policy":"null"}'
+              
+            #-d '{"prevent_self_review":false,"reviewers":[{"type":"Team","id":${{ steps.get_team_id.outputs.TEAM_ID }}}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":false}}'
+              
             echo "Approver $APPROVER added to environment $ENVIRONMENT in repository $line"
-
-            
 
           done < repos.txt
