--- a/.github/workflows/add_approvers_not_overwrite.yml
+++ b/.github/workflows/add_approvers_not_overwrite.yml
@@ -1,4 +1,4 @@
-name: Test Approvers to Environments
+name: Add Approvers to Environments
 
 on:
   workflow_dispatch:
@@ -24,7 +24,6 @@ jobs:
         id: get_team_id
         env:
           ORGANIZATION: ${{ vars.ORGANIZATION }}
-          ENVIRONMENT: ${{ inputs.environment }}
           APPROVER: ${{ inputs.approver }}
         run: |
           TEAM_ID=$(curl -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/orgs/$ORGANIZATION/teams/$APPROVER | jq -r ".id")
@@ -36,31 +35,31 @@ jobs:
           ENVIRONMENT: ${{ inputs.environment }}
           APPROVER: ${{ inputs.approver }}
         run: |
-          cat repos.txt
-          echo \nTEAM_ID ${{ steps.get_team_id.outputs.TEAM_ID }}
-          while read -r line;
-          do
-
+          while read -r repo; do
             ENV_ID=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
-              "https://api.github.com/repos/$ORGANIZATION/$line/environments" | jq -r ".environments[] | select(.name==\"$ENVIRONMENT\") | .id")
-
-            echo ENV_ID: $ENV_ID
+              "https://api.github.com/repos/$ORGANIZATION/$repo/environments" | jq -r ".environments[] | select(.name==\"$ENVIRONMENT\") | .id")
 
             if [ -z "$ENV_ID" ]; then
-              echo "Environment $ENVIRONMENT not found in repository $line"
+              echo "Environment $ENVIRONMENT not found in repository $repo"
               continue
             fi
 
+            # Get existing reviewers
+            EXISTING_REVIEWERS=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
+              "https://api.github.com/repos/$ORGANIZATION/$repo/environments/$ENVIRONMENT" | jq '.reviewers')
+
+            # Add new reviewer to the list
+            UPDATED_REVIEWERS=$(echo "$EXISTING_REVIEWERS" | jq ". += [{\"type\": \"Team\", \"id\": ${{ steps.get_team_id.outputs.TEAM_ID }} }]")
+
+            # Update environment with new list of reviewers
             curl -L \
               -X PUT \
               -H "Accept: application/vnd.github+json" \
               -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/$ORGANIZATION/$line/environments/$ENVIRONMENT \
-              -d '{"prevent_self_review":false,"reviewers":[{"type":"Team","id":${{ steps.get_team_id.outputs.TEAM_ID }}}],"deployment_branch_policy":null}'
-              
-            #-d '{"prevent_self_review":false,"reviewers":[{"type":"Team","id":${{ steps.get_team_id.outputs.TEAM_ID }}}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":false}}'
-              
-            echo "Approver $APPROVER added to environment $ENVIRONMENT in repository $line"
+              "https://api.github.com/repos/$ORGANIZATION/$repo/environments/$ENVIRONMENT" \
+              -d "{\"prevent_self_review\":false,\"reviewers\":$UPDATED_REVIEWERS,\"deployment_branch_policy\":null}"
+
+            echo "Approver $APPROVER added to environment $ENVIRONMENT in repository $repo"
 
           done < repos.txt
