--- a/.github/workflows/add_approvers_not_overwrite.yml
+++ b/.github/workflows/add_approvers_not_overwrite.yml
@@ -72,4 +72,7 @@ jobs:
 
             echo "Approver $APPROVER added to environment $ENVIRONMENT in repository $repo"
 
+            echo ###########################################################################################
+            echo ###########################################################################################
+
           done < repos.txt
