--- a/.github/workflows/add_approvers.yml
+++ b/.github/workflows/add_approvers.yml
@@ -58,6 +58,8 @@ jobs:
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/$ORGANIZATION/$line/environments/$ENVIRONMENT \
               -d '{"prevent_self_review":false,"reviewers":[{"type":"Team","id":10247046},{"type":"Team","id":10247043}],"deployment_branch_policy":null}'
+            
+            #-d '{"prevent_self_review":false,"reviewers":[{"type":"Team","id":${{ steps.get_team_id.outputs.TEAM_ID }}}],"deployment_branch_policy":null}'
               
             #-d '{"prevent_self_review":false,"reviewers":[{"type":"Team","id":${{ steps.get_team_id.outputs.TEAM_ID }}}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":false}}'
               
