--- a/.github/workflows/add_approvers_not_overwrite.yml
+++ b/.github/workflows/add_approvers_not_overwrite.yml
@@ -29,11 +29,48 @@ jobs:
           TEAM_ID=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/orgs/$ORGANIZATION/teams/$APPROVER | jq -r ".id")
           echo "TEAM_ID=$TEAM_ID" >> $GITHUB_OUTPUT
 
+      - name: Process reviewers
+        id: process_reviewers
+        env:
+          ORGANIZATION: ${{ vars.ORGANIZATION }}
+          ENVIRONMENT: ${{ inputs.environment }}
+        run: |
+          repo="your-repo-name" # replace this with your repo variable
+
+          # Get existing reviewers
+          ENV_DETAILS=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
+            "https://api.github.com/repos/$ORGANIZATION/$repo/environments/$ENVIRONMENT")
+          echo "Environment details: $ENV_DETAILS"
+
+          EXISTING_REVIEWERS=$(echo "$ENV_DETAILS" | jq -r '.protection_rules[] | select(.type=="required_reviewers") | .reviewers[].reviewer | @base64')
+          echo "Existing reviewers: $EXISTING_REVIEWERS"
+
+          REVIEWERS_ARRAY=""
+
+          for reviewer in $EXISTING_REVIEWERS; do
+            reviewer_json=$(echo $reviewer | base64 --decode)
+            reviewer_id=$(echo $reviewer_json | jq -r '.id')
+            REVIEWERS_ARRAY="${REVIEWERS_ARRAY}{\"type\":\"Team\",\"id\":$reviewer_id},"
+          done
+
+          # Remove the last comma
+          REVIEWERS_ARRAY=${REVIEWERS_ARRAY%,}
+
+          # Add the new reviewer ID if it does not exist
+          NEW_REVIEWER_ID=${{ steps.get_team_id.outputs.TEAM_ID }}
+          if ! echo "$REVIEWERS_ARRAY" | grep -q "\"id\":$NEW_REVIEWER_ID"; then
+            REVIEWERS_ARRAY="${REVIEWERS_ARRAY},{\"type\":\"Team\",\"id\":$NEW_REVIEWER_ID}"
+          fi
+
+          # Output the result
+          echo "REVIEWERS_ARRAY=[$REVIEWERS_ARRAY]" >> $GITHUB_OUTPUT
+          echo "Updated reviewers array: [$REVIEWERS_ARRAY]"
+
       - name: Add Approvers to Environments
         env:
           ORGANIZATION: ${{ vars.ORGANIZATION }}
           ENVIRONMENT: ${{ inputs.environment }}
-          APPROVER: ${{ inputs.approver }}
+          REVIEWERS_ARRAY: ${{ steps.process_reviewers.outputs.REVIEWERS_ARRAY }}
         run: |
           while read -r repo; do
             ENV_ID=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
@@ -44,18 +81,6 @@ jobs:
               continue
             fi
 
-            # Get existing reviewers
-            ENV_DETAILS=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
-              "https://api.github.com/repos/$ORGANIZATION/$repo/environments/$ENVIRONMENT")
-            echo "Environment details: $ENV_DETAILS"
-            
-            EXISTING_REVIEWERS=$(echo "$ENV_DETAILS" | jq -r '.protection_rules[] | select(.type=="required_reviewers") | .reviewers[].reviewer.name')
-            echo "Existing reviewers: $EXISTING_REVIEWERS"
-
-            # Prepare updated reviewers list
-            UPDATED_REVIEWERS=$(echo "$EXISTING_REVIEWERS" | jq -c '[.] | add | unique | . + [{"type": "Team", "id": '"${{ steps.get_team_id.outputs.TEAM_ID }}"'}]')
-            echo $UPDATED_REVIEWERS
-
             # Update environment with new list of reviewers
             curl -s -L \
               -X PUT \
@@ -63,14 +88,7 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               "https://api.github.com/repos/$ORGANIZATION/$repo/environments/$ENVIRONMENT" \
-              -d '{"reviewers":'"$UPDATED_REVIEWERS"',"deployment_branch_policy":null}'
-
-            # Get reviewers after update
-            NEW_REVIEWERS=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
-              "https://api.github.com/repos/$ORGANIZATION/$repo/environments/$ENVIRONMENT" | jq -r '.protection_rules[] | select(.type=="required_reviewers") | .reviewers[].reviewer.name')
-
-            echo "Reviewers for $repo in $ENVIRONMENT after adding $APPROVER:"
-            echo "$NEW_REVIEWERS"
+              -d '{"reviewers":'"$REVIEWERS_ARRAY"',"deployment_branch_policy":null}'
 
             echo "Approver $APPROVER added to environment $ENVIRONMENT in repository $repo"
 
