--- a/.github/workflows/add_file.yml
+++ b/.github/workflows/add_file.yml
@@ -8,6 +8,8 @@ on:
         description: 'Branch to automate'
         type: choice
         options: ['development', 'certification']
+      config_file:
+        description: 'Config file with repos to update'
       file:
         description: 'File to add in repo'
       path:
@@ -27,7 +29,7 @@ jobs:
       - name: Get configs var
         id: get-repo-name
         run: |
-          JSON=$(cat repo.json)
+          JSON=$(cat ${{ inputs.config_file }})
           echo "matrix=${JSON}" >> $GITHUB_OUTPUT
 
   loop:
